--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,5 +1,4 @@
 
-
 @media ( max-width: 992px )
     .container
         max-width: 770px
@@ -9,8 +8,9 @@
 
 @media ( max-width: 768px)
     .container
-        padding: 0 15px 0 15px
     .advantagers
+        padding: 50px 15px 50px 15px
+
         &__block
             width: 202px
     .header
@@ -26,7 +26,7 @@
                 height: 28px
         &__phone
             font-size: 16px
-    
+
     .promo
         &__header
             font-size: 40px
@@ -52,7 +52,7 @@
                 height: 35px
         &__phone
             font-size: 22px
-    
+
     .promo
         &__header
             font-size: 30px
@@ -74,4 +74,6 @@
                 margin-bottom: 5px
         &__text
             margin-top: 3px
- 
+    .consultation
+            padding: 100px 15px 92px 15px
+
