--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,6 +12,8 @@
 @import "blocks/promo"
 @import "blocks/header"
 @import "base/buttons"
+@import "base/titles"
+@import "base/forms"
 @import "blocks/advantagers"
 @import "base/media"
 @import "blocks/consultation"
