--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -14,3 +14,8 @@
         width: 300px
         height: 50px
         font-size: 16px
+    &__submit
+        margin-top: 20px
+        width: 100%
+        height: 55px
+        font-size: 16px
