--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,5 +15,8 @@
 @import "base/titles"
 @import "base/forms"
 @import "blocks/advantagers"
-@import "base/media"
 @import "blocks/consultation"
+@import "blocks/carousel"
+
+
+@import "base/media"
