--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,6 +17,7 @@
 @import "blocks/advantagers"
 @import "blocks/consultation"
 @import "blocks/carousel"
+@import "blocks/catalog"
 
 
 @import "base/media"
