--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -9,6 +9,8 @@
     font-weight: 500
     text-align: center
     text-transform: uppercase
+    &:hover
+        box-shadow: 3px 3px 20px #c70101
     &__main
         margin-top: 67px
         width: 300px
