--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -34,7 +34,7 @@
     &__content
         margin-top: 60px
         display: none
-        justify-content: space-between
+        justify-content: center
         flex-wrap: wrap
         &_active
             display: flex
@@ -44,7 +44,9 @@
         border: 2px solid #e8e8e8
         padding: 20px 20px 25px 20px
         overflow: hidden
+        margin: 0 10px
         margin-bottom: 20px
+        
         &__img
             display: block
             margin: 0 auto
