mailer, form, modal, pageup, map add

--- a/src/sass/base/_forms.sass
+++ b/src/sass/base/_forms.sass
@@ -15,3 +15,11 @@
         font-weight: 300px
         &:first-child
             margin-top: 0
+    &_25
+        margin-top: 25px
+    .error
+        border: 2px solid red
+    label.error
+        border: none
+        text-align: center
+        margin-bottom: 12px
