--- a/src/sass/blocks/_advantagers.sass
+++ b/src/sass/blocks/_advantagers.sass
@@ -17,6 +17,14 @@
             display: block
             margin: 0 auto
             margin-bottom: 38px
+        &__icon
+            &_animated-heart
+                animation: heartbeat 1.5s ease infinite
+            &_animated-cup
+                animation: cupmovement 1.7s ease infinite
+            &_animated-shoe
+                animation: shoemovement 2s ease infinite
+                
     &__text
         margin-top: 26px
         color: #0d0d0d
