--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,7 @@
     font-family: 'Museo Sans'
 @import "base/variables"
 @import "base/mixins"
+@import "base/animation"
 
 
 
@@ -20,5 +21,7 @@
 @import "blocks/catalog"
 @import "blocks/reviews"
 @import "blocks/footer"
+@import "blocks/modal"
+@import "base/pageup"
 
 @import "base/media"
