--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -44,7 +44,7 @@
         border: 2px solid #e8e8e8
         padding: 20px 20px 25px 20px
         overflow: hidden
-        margin: 0 10px
+        margin: 0 8px
         margin-bottom: 20px
         
         &__img
@@ -117,6 +117,9 @@
             &_active
                 margin-left: 0px
                 transform: translateX(-100%)
+            ul
+                padding: 0
+                
             li
                 position: relative
                 color: #555555
